--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -20,12 +20,12 @@ jobs:
         with:
           arguments: build
 
-#      # https://github.com/marketplace/actions/code-climate-coverage-action
-#      - name: Publish code coverage
-#        uses: paambaati/codeclimate-action@v5.0.0
-#        env:
-#          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-#          JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
-#        with:
-#          coverageLocations: ${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
+      # https://github.com/marketplace/actions/code-climate-coverage-action
+      - name: Publish code coverage
+        uses: paambaati/codeclimate-action@v5.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
+        with:
+          coverageLocations: ${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
 
